# docker-stats-parser

./: LICESENSE  pyproject.toml  readme.md
docker_stats_parser/: __main__.py  docker_stats_parser.py  utils.py
