[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-docker-stats-parser"
version = "0.0.1"
authors = [
  { name="Maxim Sinyaev", email="sinyaevmaxim@gmail.com" },
]
description = "Simple python parser for docker stats output."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MaximSinyaev/docker-stats-parser"
"Bug Tracker" = "https://github.com/MaximSinyaev/docker-stats-parser/issues"